# python-design-patterns

./: .gitignore  Makefile  README.md  pyproject.toml
