[project]
name = "python-design-patterns"
version = "0.1.0"
description = "Common design patterns written in Python"
authors = [
    {name = "Helene Nguyen", email = "helene.dyn.nguyen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
# Use Poetry only for dependency management but not for packaging
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
#extend-select = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"